--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ body {
 /* gift box */
 /* ******************************************************************************* */
 /* ******************************************************************************* */
-.gift--box-section {
+.gift-box-section {
     margin: 0;
     display: flex;
     align-items: center;
@@ -138,7 +138,7 @@ body {
 
 }
 
-.gift-box-cap{
+.gift-box-cap {
     z-index: 1;
     top: -80px;
     left: -20px;
@@ -242,7 +242,7 @@ body {
     animation: blink-caret .50s step-end infinite;
 }
 
-.gift-box-countdown{
+.gift-box-countdown {
     font-family: monospace;
 }
 
@@ -328,6 +328,461 @@ body {
         opacity: 1;
     }
 }
+
+
+
+
+
+
+/* gift box content start */
+/* ******************************************************************************* */
+/* ******************************************************************************* */
+.gift-box-hidden-content {
+    display: none;
+}
+
+.gift-box-content-container {
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    /* transition-delay: 1s; */
+    transform: translate(-50%, -50%) scale(0);
+    transition: transform 2.5s ease-in-out;
+}
+
+.gift-box-content-body {
+    display: flex;
+    overflow: hidden;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    border: 5px solid rgb(30, 144, 255);
+    background-color: black;
+}
+
+.image-box {
+    z-index: 5;
+    width: 200px;
+    height: 200px;
+    position: relative;
+    transform-style: preserve-3d;
+    animation: ImageAnimate 30s linear infinite;
+}
+
+.image-box .title {
+    top: -200px;
+    color: magenta;
+    width: max-content;
+    position: absolute;
+}
+
+.image-box span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    transform-style: preserve-3d;
+    transform: rotateY(calc(var(--i) * 45deg)) translateZ(400px);
+    -webkit-box-reflect: below 0px linear-gradient(transparent, transparent, hsla(0, 0%, 0%, 0.7));
+}
+
+.image-box span img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* width: 200px; */
+    /* height: auto; */
+    object-fit: cover;
+    border: 1px solid black;
+    border-radius: 25px;
+}
+
+@keyframes ImageAnimate {
+    0% {
+        transform: perspective(1000px) rotateY(0deg);
+    }
+
+    100% {
+        transform: perspective(1000px) rotateY(360deg);
+    }
+}
+
+
+
+
+
+
+/* gift-box-content-title-container start */
+/* ******************************************************************************* */
+/* ******************************************************************************* */
+.gift-box-content-top-left-title-container {
+    position: absolute;
+    top: 80px;
+    left: 20px;
+    rotate: -45deg;
+}
+
+.gift-box-content-bottom-right-title-container {
+    position: absolute;
+    bottom: 80px;
+    right: 20px;
+    rotate: -45deg;
+}
+
+.gift-box-content-title {
+    display: flex;
+    /* justify-content: center; */
+    color: transparent;
+    font-size: 5vw;
+    font-family: monospace;
+    font-family: "Bad Script", cursive;
+}
+
+.gift-box-content-title-span {
+    animation: ColorAnimate 3s linear infinite;
+    animation-delay: calc(0.1s * var(--i));
+}
+
+@keyframes ColorAnimate {
+    0% {
+        color: #fff;
+        filter: blur(2px) hue-rotate(0deg);
+        text-shadow: 0 0 10px dodgerblue,
+            0 0 20px dodgerblue,
+            0 0 40px dodgerblue,
+            0 0 80px dodgerblue,
+            0 0 120px dodgerblue,
+            0 0 200px dodgerblue,
+            0 0 300px dodgerblue,
+            0 0 400px dodgerblue;
+    }
+
+    30%,
+    70% {
+        color: #fff;
+        filter: blur(2px) hue-rotate(360deg);
+        text-shadow: 0 0 10px dodgerblue,
+            0 0 20px dodgerblue,
+            0 0 40px dodgerblue,
+            0 0 80px dodgerblue,
+            0 0 120px dodgerblue,
+            0 0 200px dodgerblue,
+            0 0 300px dodgerblue,
+            0 0 400px dodgerblue;
+    }
+
+    100% {
+        color: transparent;
+        box-shadow: none;
+        filter: blur(2px) hue-rotate(0deg);
+    }
+}
+
+
+
+
+
+
+/* heart-container-top-left start */
+/* ******************************************************************************* */
+/* ******************************************************************************* */
+/* .heart-container {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #000;
+    overflow: hidden;
+} */
+.heart-container-top-left {
+    position: absolute;
+    /* top: 30px; */
+    /* left: 20px; */
+    /* right: 20px; */
+}
+
+.heart-top-left {
+    position: relative;
+    width: 100px;
+    height: 90px;
+    transform: scale(1);
+    animation: HeartTopLeft 2s infinite;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.heart-top-left::before,
+.heart-top-left::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50px;
+    width: 50px;
+    height: 80px;
+    background: red;
+    border-radius: 50px 50px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+}
+
+.heart-top-left::after {
+    left: 0;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
+}
+
+.heart-glow-top-left {
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    width: 120px;
+    height: 110px;
+    background: yellow;
+    border-radius: 50%;
+    z-index: -1;
+    filter: blur(20px);
+    animation: HeartGlowTopLeft 2s ease-in-out infinite;
+}
+
+@keyframes HeartTopLeft {
+
+    0%,
+    100% {
+        transform: scale(0.8);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+}
+
+@keyframes HeartGlowTopLeft {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+}
+
+.small-red-heart {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: red;
+    border-radius: 50%;
+    animation: fly 3s linear infinite;
+}
+
+.small-red-heart::before,
+.small-red-heart::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50px;
+    width: 50px;
+    height: 90px;
+    background: red;
+    border-radius: 50px 50px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+}
+
+.small-red-heart::after {
+    left: 0;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
+}
+
+@keyframes fly {
+    0% {
+        transform: translateY(100vh) rotate(0deg);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateY(-100vh) rotate(0deg);
+        opacity: 0;
+    }
+}
+
+
+
+
+
+/* heart-container-bottom-right start */
+/* ******************************************************************************* */
+/* ******************************************************************************* */
+.heart-container-bottom-right {
+    position: absolute;
+    /* bottom: 30px; */
+    /* right: 20px; */
+    /* left: 20px; */
+}
+
+.heart-bottom-right {
+    position: relative;
+    width: 100px;
+    height: 90px;
+    transform: scale(1);
+    animation: HeartBottomRight 2s infinite;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.heart-bottom-right::before,
+.heart-bottom-right::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50px;
+    width: 50px;
+    height: 80px;
+    background: yellow;
+    border-radius: 50px 50px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+}
+
+.heart-bottom-right::after {
+    left: 0;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
+}
+
+.heart-glow-bottom-right {
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    width: 120px;
+    height: 110px;
+    background: red;
+    border-radius: 50%;
+    z-index: -1;
+    filter: blur(20px);
+    animation: HeartGlowBottomRight 2s ease-in-out infinite;
+}
+
+@keyframes HeartBottomRight {
+
+    0%,
+    100% {
+        transform: scale(0.8);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+}
+
+@keyframes HeartGlowBottomRight {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+}
+
+.small-yellow-heart {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: yellow;
+    border-radius: 50%;
+    animation: fly2 3s linear infinite;
+}
+
+.small-yellow-heart::before,
+.small-yellow-heart::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50px;
+    width: 50px;
+    height: 90px;
+    background: yellow;
+    border-radius: 50px 50px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+}
+
+.small-yellow-heart::after {
+    left: 0;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
+}
+
+@keyframes fly2 {
+    0% {
+        transform: translateY(100vh) rotate(0deg);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateY(-100vh) rotate(0deg);
+        opacity: 0;
+    }
+}
+
+
+
+
+/* shooting-stars start */
+/* ******************************************************************************* */
+/* ******************************************************************************* */
+/* .stars {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    background: linear-gradient(black, #071924);
+} */
+
+.star {
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    background: white;
+    animation: shooting-stars 6s linear infinite;
+}
+
+@keyframes shooting-stars {
+    0% {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(100vh) scale(0);
+    }
+}
+
+
+
+
+
 /* default color start */
 /* ******************************************************************************* */
 /* ******************************************************************************* */
@@ -493,52 +948,3 @@ body {
 /* default color start */
 /* ******************************************************************************* */
 /* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
