--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,26 @@ body {
 
 
 
+/* Main Heading */
+/* ******************************************************************************* */
+/* ******************************************************************************* */
+.gift-box-heading{
+    color: dodgerblue;
+    position: absolute;
+    top: 150px;
+    transition: top 0.5s;
+    transition-delay: 1s;
+}
+
+.gift-box-heading.active{
+    color: dodgerblue;
+    top: 0;
+}
+
+
+
+
+
 /* gift box */
 /* ******************************************************************************* */
 /* ******************************************************************************* */
