--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,3 @@
-/* google front */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-@import url('https://fonts.googleapis.com/css2?family=Bad+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Tiro+Bangla:ital@0;1&display=swap');
-
-
-
-
-
 /* all elements style */
 /* ******************************************************************************* */
 /* ******************************************************************************* */
@@ -17,10 +6,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-
-
-
 
 /* body elements style */
 /* ******************************************************************************* */
@@ -31,55 +16,6 @@ body {
     font-family: "Bad Script", cursive;
     overflow: hidden;
 }
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-.d-color-green {
-    color: #26d98e;
-}
-
-.d-color-blue {
-    color: #0059b2;
-}
-
-.d-color-black {
-    color: #000000;
-}
-
-.d-bgcolor-green {
-    background-color: #26d98e;
-}
-
-.d-bgcolor-blue {
-    /* background-color: rgba(0, 115, 230, 1); */
-    background-color: #0059b2;
-}
-
-.d-bgcolor-black {
-    background-color: #000000;
-}
-
-.d-border-color-green {
-    border: 1px solid #26d98e !important;
-}
-
-.d-border-color-blue {
-    border: 1px solid #0059b2 !important;
-}
-
-.d-border-color-black {
-    border: 1px solid #000000 !important;
-}
-
-
-
-
-
 
 /* Main Heading */
 /* ******************************************************************************* */
@@ -509,462 +445,22 @@ body {
 
 
 
-
-/* heart-container-top-left start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-/* .heart-container {
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #000;
-    overflow: hidden;
-} */
-.heart-container-top-left {
-    position: absolute;
-    /* top: 30px; */
-    /* left: 20px; */
-    /* right: 20px; */
+.gift-btn.active{
+    display: none;
 }
 
-.heart-top-left {
-    position: relative;
-    width: 100px;
-    height: 90px;
-    transform: scale(1);
-    animation: HeartTopLeft 2s infinite;
-    cursor: pointer;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.heart-top-left::before,
-.heart-top-left::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50px;
-    width: 50px;
-    height: 80px;
-    background: red;
-    border-radius: 50px 50px 0 0;
-    transform: rotate(-45deg);
-    transform-origin: 0 100%;
-}
-
-.heart-top-left::after {
-    left: 0;
-    transform: rotate(45deg);
-    transform-origin: 100% 100%;
-}
-
-.heart-glow-top-left {
-    position: absolute;
-    top: -10px;
-    left: -10px;
-    width: 120px;
-    height: 110px;
-    background: yellow;
-    border-radius: 50%;
-    z-index: -1;
-    filter: blur(20px);
-    animation: HeartGlowTopLeft 2s ease-in-out infinite;
-}
-
-@keyframes HeartTopLeft {
-
-    0%,
-    100% {
-        transform: scale(0.8);
+@keyframes pulse {
+    0% {
+        transform: scale(1);
     }
-
     50% {
         transform: scale(1.1);
     }
-}
-
-@keyframes HeartGlowTopLeft {
-
-    0%,
     100% {
-        opacity: 1;
-    }
-
-    50% {
-        opacity: 0.5;
+        transform: scale(1);
     }
 }
 
-.small-red-heart {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    background: red;
-    border-radius: 50%;
-    animation: fly 3s linear infinite;
+.gift-btn-animation{
+    animation: pulse 2s infinite;
 }
-
-.small-red-heart::before,
-.small-red-heart::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50px;
-    width: 50px;
-    height: 90px;
-    background: red;
-    border-radius: 50px 50px 0 0;
-    transform: rotate(-45deg);
-    transform-origin: 0 100%;
-}
-
-.small-red-heart::after {
-    left: 0;
-    transform: rotate(45deg);
-    transform-origin: 100% 100%;
-}
-
-@keyframes fly {
-    0% {
-        transform: translateY(100vh) rotate(0deg);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateY(-100vh) rotate(0deg);
-        opacity: 0;
-    }
-}
-
-
-
-
-
-/* heart-container-bottom-right start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-.heart-container-bottom-right {
-    position: absolute;
-    /* bottom: 30px; */
-    /* right: 20px; */
-    /* left: 20px; */
-}
-
-.heart-bottom-right {
-    position: relative;
-    width: 100px;
-    height: 90px;
-    transform: scale(1);
-    animation: HeartBottomRight 2s infinite;
-    cursor: pointer;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.heart-bottom-right::before,
-.heart-bottom-right::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50px;
-    width: 50px;
-    height: 80px;
-    background: yellow;
-    border-radius: 50px 50px 0 0;
-    transform: rotate(-45deg);
-    transform-origin: 0 100%;
-}
-
-.heart-bottom-right::after {
-    left: 0;
-    transform: rotate(45deg);
-    transform-origin: 100% 100%;
-}
-
-.heart-glow-bottom-right {
-    position: absolute;
-    top: -10px;
-    left: -10px;
-    width: 120px;
-    height: 110px;
-    background: red;
-    border-radius: 50%;
-    z-index: -1;
-    filter: blur(20px);
-    animation: HeartGlowBottomRight 2s ease-in-out infinite;
-}
-
-@keyframes HeartBottomRight {
-
-    0%,
-    100% {
-        transform: scale(0.8);
-    }
-
-    50% {
-        transform: scale(1.1);
-    }
-}
-
-@keyframes HeartGlowBottomRight {
-
-    0%,
-    100% {
-        opacity: 1;
-    }
-
-    50% {
-        opacity: 0.5;
-    }
-}
-
-.small-yellow-heart {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    background: yellow;
-    border-radius: 50%;
-    animation: fly2 3s linear infinite;
-}
-
-.small-yellow-heart::before,
-.small-yellow-heart::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50px;
-    width: 50px;
-    height: 90px;
-    background: yellow;
-    border-radius: 50px 50px 0 0;
-    transform: rotate(-45deg);
-    transform-origin: 0 100%;
-}
-
-.small-yellow-heart::after {
-    left: 0;
-    transform: rotate(45deg);
-    transform-origin: 100% 100%;
-}
-
-@keyframes fly2 {
-    0% {
-        transform: translateY(100vh) rotate(0deg);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateY(-100vh) rotate(0deg);
-        opacity: 0;
-    }
-}
-
-
-
-
-/* shooting-stars start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-/* .stars {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    background: linear-gradient(black, #071924);
-} */
-
-.star {
-    position: absolute;
-    width: 4px;
-    height: 4px;
-    background: white;
-    animation: shooting-stars 6s linear infinite;
-}
-
-@keyframes shooting-stars {
-    0% {
-        opacity: 1;
-        transform: translateY(0) scale(1);
-    }
-
-    100% {
-        opacity: 0;
-        transform: translateY(100vh) scale(0);
-    }
-}
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
-
-
-
-
-
-
-/* default color start */
-/* ******************************************************************************* */
-/* ******************************************************************************* */
