--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,14 @@
 }
 
 body {
-    font-family: "Bad Script", cursive;
+    /* font-family: "Bad Script", cursive; */
+    background-color: black;
+    font-family: 'Josefin Sans';
+    /* font-style: italic; */
     overflow: hidden;
 }
 
-.gift-box-heading{
+.gift-box-heading {
     color: dodgerblue;
     position: absolute;
     top: 150px;
@@ -21,7 +24,7 @@ body {
     transition-delay: 1s;
 }
 
-.gift-box-heading.active{
+.gift-box-heading.active {
     color: dodgerblue;
     top: -80px;
 }
@@ -126,14 +129,14 @@ body {
 }
 
 .gift-box-shadow {
-    top: 90px;
+    top: 100px;
     left: -4px;
-    width: 350px;
-    height: 50px;
+    width: 380px;
+    height: 80px;
     content: '';
     position: relative;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(255, 255, 255, 0.5);
     animation: GiftBoxShadowBounce 3s ease infinite forwards;
 }
 
@@ -268,7 +271,7 @@ body {
     }
 }
 
-.gift-btn.active{
+.gift-btn.active {
     display: none;
 }
 
@@ -276,14 +279,16 @@ body {
     0% {
         transform: scale(1);
     }
+
     50% {
         transform: scale(1.1);
     }
+
     100% {
         transform: scale(1);
     }
 }
 
-.gift-btn-animation{
+.gift-btn-animation {
     animation: pulse 2s infinite;
 }
