--- a/assets/css/gift-style.css
+++ b/assets/css/gift-style.css
@@ -19,6 +19,11 @@ body {
 .main-section {
     box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.9);
     border: 2px solid #0ff;
+    position: relative;
+    width: 90vw;
+    height: 90vh;
+    background: rgba(255, 255, 255, 0.5);
+    overflow: hidden;
 }
 
 /* .image-section {
@@ -77,5 +82,44 @@ body {
     display: block;
     width: 100%;
 }
+/* heart */
+.small-heart {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: red;
+    border-radius: 50%;
+    animation: fly 5s linear infinite;
+}
 
-/* swiper */
+.small-heart::before,
+.small-heart::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50px;
+    width: 50px;
+    height: 90px;
+    background: inherit;
+    border-radius: 50px 50px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+}
+
+.small-heart::after {
+    left: 0;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
+}
+
+@keyframes fly {
+    0% {
+        transform: translateY(100vh) rotate(0deg);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateY(-100vh) rotate(0deg);
+        opacity: 1;
+    }
+}
