--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@
 
 body {
     /* font-family: "Bad Script", cursive; */
-    background-color: black;
+    background-color: wheat;
+    /* background-color: black; */
     font-family: 'Josefin Sans';
     /* font-style: italic; */
     overflow: hidden;
@@ -136,7 +137,8 @@ body {
     content: '';
     position: relative;
     border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(255, 255, 255, 0.5); */
     animation: GiftBoxShadowBounce 3s ease infinite forwards;
 }
 
