update the style of index and remove  animation on gift.html

--- a/assets/css/gift-style-2.0.css
+++ b/assets/css/gift-style-2.0.css
@@ -19,11 +19,11 @@ body {
 .main-section {
     box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.9);
     border: 2px solid #0ff;
-    /* position: relative;
+    position: relative;
     width: 90vw;
     height: 90vh;
     background: rgba(255, 255, 255, 0.5);
-    overflow: hidden; */
+    overflow: hidden;
 }
 
 /* .image-section {
@@ -44,10 +44,7 @@ body {
     border: 3px solid #0ff;
     border-radius: 15px;
 }
-.gift-title-body{
-    position: relative;
-    z-index: 5;
-}
+
 .gift-title-text {
     color: #0ff;
     text-shadow:
@@ -86,7 +83,7 @@ body {
     width: 100%;
 }
 /* heart */
-/* .small-heart {
+.small-heart {
     position: absolute;
     width: 50px;
     height: 50px;
@@ -125,4 +122,4 @@ body {
         transform: translateY(-100vh) rotate(0deg);
         opacity: 1;
     }
-} */
+}
