--- a/old/main/assets/css/gift-style.css
+++ b/old/main/assets/css/gift-style.css
@@ -19,23 +19,35 @@ body {
 .main-section {
     box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.9);
     border: 2px solid #0ff;
+    /* position: relative;
+    width: 90vw;
+    height: 90vh;
+    background: rgba(255, 255, 255, 0.5);
+    overflow: hidden; */
 }
+
+/* .image-section {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+    border: 6px solid black;
+    border-radius: 10px;
+} */
 
 .gift-img {
     background-position: center;
     background-size: cover;
     width: 250px;
     height: 250px;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+    border: 6px solid black;
+    border-radius: 10px; */
     box-shadow: 0 0 20px rgba(0, 0, 0, 1);
     border: 3px solid #0ff;
     border-radius: 15px;
 }
-
-.gift-title-body {
+.gift-title-body{
     position: relative;
     z-index: 5;
 }
-
 .gift-title-text {
     color: #0ff;
     text-shadow:
@@ -52,6 +64,8 @@ body {
     background-color: yellow;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 1);
 }
+
+
 
 /* swiper */
 .swiper {
@@ -71,3 +85,44 @@ body {
     display: block;
     width: 100%;
 }
+/* heart */
+/* .small-heart {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: red;
+    border-radius: 50%;
+    animation: fly 5s linear infinite;
+}
+
+.small-heart::before,
+.small-heart::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50px;
+    width: 50px;
+    height: 90px;
+    background: inherit;
+    border-radius: 50px 50px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+}
+
+.small-heart::after {
+    left: 0;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
+}
+
+@keyframes fly {
+    0% {
+        transform: translateY(100vh) rotate(0deg);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateY(-100vh) rotate(0deg);
+        opacity: 1;
+    }
+} */
